Share member data through csv file.

--- a/test/GameEngine.Tests/GameEngine.Tests.csproj
+++ b/test/GameEngine.Tests/GameEngine.Tests.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\..\src\GameEngine\GameEngine.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+  <Content Include="TestData.csv">
+    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+  </Content>
+</ItemGroup>
+
 </Project>
